# pkg-config

./: .gitignore  main.cpp  main.d  meson.build  parse.c  parse.cpp  parse.d  parse.h  pkg-config.1  pkg.c  pkg.cpp  pkg.d  pkg.h  pkg.m4.in  quoter.cpp  quoter.d  quoter.h  rpmvercmp.cpp  rpmvercmp.d  rpmvercmp.h  utils.cpp  utils.d  utils.h
check/: Makefile.am  check-cflags.py  check-circular-requires.py  check-cmd-options.py  check-conflicts.py  check-debug.py  check-define-variable.py  check-dependencies.py  check-duplicate-flags.py  check-gtk.py  check-includedir.py  check-libs-private.py  check-libs.py  check-missing.py  check-mixed-flags.py  check-non-l-flags.py  check-path.py  check-print-options.py  check-relocatable.py  check-requires-private.py  check-requires-version.py  check-sort-order.py  check-special-flags  check-special-flags.py  check-sysroot  check-sysroot.py  check-system-flags  check-system-flags.py  check-tilde.py  check-uninstalled.py  check-variable-override.py  check-variables.py  check-version.py  check-whitespace.py  config.sh.in  meson.build  pkgchecker.py
